2003-04-21  Alex Duggan  <aldug@gnome.org>

	* TODO: Initial import
	
	* Makefile.am: s/${TAR}/tar to work around problem on rh9

2003-04-18 Christian Schaller <uraues@gnome.org>
	* Update Nuvola metatheme
	* Adding Smooth Winther GTK theme to Nuvola
	* Removed the use of Automake 1.4 as smooth need 1.6
	* make tarballs don't work for me since ${TAR} gets translated into null
	* the iconrc files includes fixed paths, they need to be made into iconrc.in files that get the path from the build, the iconrc files are in the BlueSphere/gtk-2.0 and Nuvola/gtk-2.0 dirs

2003-04-17  Alex Duggan  <aldug@astrolinux.com>

	* README: update with instructions for making releases
	and building tarballs

2003-04-17  Alex Duggan  <aldug@astrolinux.com>
	
	* .cvsignore:
	add gnome-themes-extras.spec
	
	* BlueSphere/.cvsignore:
	* BlueSphere/gtk-2.0/.cvsignore:
	* BlueSphere/icons/.cvsignore:
	* BlueSphere/icons/scalable/.cvsignore:
	* BlueSphere/icons/scalable/stock/.cvsignore:
	* BlueSphere/metacity-1/.cvsignore:
	* Galaxy/.cvsignore:
	* Galaxy/gtk-2.0/.cvsignore:
	* Galaxy/metacity-1/.cvsignore:
	* Lush/.cvsignore:
	* Lush/icons/.cvsignore:
	* Lush/icons/scalable/.cvsignore:
	* Lush/icons/scalable/devices/.cvsignore:
	* Lush/icons/scalable/emblems/.cvsignore:
	* Lush/icons/scalable/filesystems/.cvsignore:
	* Lush/icons/scalable/mimetypes/.cvsignore:
	* Nuvola/.cvsignore:
	* Nuvola/icons/.cvsignore:
	* Nuvola/icons/scalable/.cvsignore:
	* Nuvola/icons/scalable/apps/.cvsignore:
	* Nuvola/icons/scalable/devices/.cvsignore:
	* Nuvola/icons/scalable/emblems/.cvsignore:
	* Nuvola/icons/scalable/filesystems/.cvsignore:
	* Nuvola/icons/scalable/mimetypes/.cvsignore:
	Add some new .cvsignore to shut cvs up

2003-04-17  Alex Duggan  <aldug@astrolinux.com>

	* Makefile.am: impliment a 'make tarballs' target which will
	build tarballs of the themes.

2003-04-17  Alex Duggan  <aldug@astrolinux.com>

	* configure.in:
	* Galaxy/Makefile.am:
	move metacity theme from metacity to metacity-1
	