@@ -68,6 +68,7 @@ Nuvola/icons/scalable/emblems/Makefile
 Nuvola/icons/scalable/filesystems/Makefile
 Nuvola/icons/scalable/mimetypes/Makefile
 Nuvola/icons/scalable/stock/Makefile
+Nuvola/metacity-1/Makefile
 Lush/Makefile
 Lush/icons/Makefile
 Lush/icons/scalable/Makefile
