@@ -27,19 +27,22 @@ make
 rm -rf ${RPM_BUILD_ROOT}
 %makeinstall
 ### Remove files not to be installed
-rm -f $RPM_BUILD_ROOT%{_libdir}/gtk-2.0/2.2.0/engines/*.la
-rm -f $RPM_BUILD_ROOT%{_libdir}/gtk-2.0/2.2.0/engines/*.a
+rm -f $RPM_BUILD_ROOT%{_libdir}/gtk-2.0/@GTK_BINARY_VERSION@/engines/*.la
+rm -f $RPM_BUILD_ROOT%{_libdir}/gtk-2.0/@GTK_BINARY_VERSION@/engines/*.a
 %clean
 rm -rf ${RPM_BUILD_ROOT}
 
 %files
 %defattr(-, root, root)
-%{_libdir}/gtk-2.0/2.2.0/engines/*.so*
+%{_libdir}/gtk-2.0/@GTK_BINARY_VERSION@/engines/*.so*
 %{_datadir}/icons/*
 %{_datadir}/themes/*
 %doc AUTHORS ChangeLog COPYING README
 
 %changelog
+* Thu May 01 2003 Yanko Kaneti <yaneti@declera.com>
+- use the GTK_BINARY_VERSION autoconf variable
+
 * Thu May 01 2003 Christian Schaller <Uraeus@gnome.org>
 - Added buildreqs
 - Added obsoletes Nuvola
