@@ -1,3 +1,10 @@
+2003-05-01  Yanko Kaneti  <yaneti@declera.com>
+
+	* configure.in (AC_OUTPUT): create Nuvola/metacity-1/Makefile
+	* Makefile.am (NUVOLA_TAR_FILES): add the metacity wm theme files. 
+	* Nuvola/Makefile.am (SUBDIRS): actually use the metacity theme. 
+	* gnome-themes-estras.spec.in: use GTK_BINARY_VERSION
+
 2003-04-21  Alex Duggan  <aldug@gnome.org>
 
 	* TODO: Initial import
